fix createBcfTopic horizontal scrollbar

--- a/src/components/specific/bcf/create-bcf-topic/CreateBcfTopic.scss
+++ b/src/components/specific/bcf/create-bcf-topic/CreateBcfTopic.scss
@@ -3,6 +3,7 @@
   height: 100%;
   flex-direction: column;
   overflow: auto;
+  overflow-x: hidden;
   &__header,
   &__image,
   &__content,
